V1.0.11
---------
 * Ensure an opaque base color for combo popups on toolbars.
 * Affect only inactive windows if the opacity reduction is negative.
 * Added a toolbar, containing a date-time editor with popup and a progress-bar, below the top toolbars of kvantumpreview.

V1.0.10
---------
 * Support editable comboboxes not derived from `QComboBox`.
 * Clean drawing of `QDateTimeEdit` with calendar widget (Qt badly draws a lineedit over a combobox).
 * Allow rounded buttons, comboboxes and lineedits for LibreOffice.
 * Fill the whole rectangle of a colored view-item.
 * Allow compilation without KDE Frameworks (KWin's blur effect will be enabled only under X11 and the contrast effect will be disabled).
 * Removed Openbox themes (Openbox's development stopped years ago).
 * Ensure enough contrast for texts of menubar corner widgets.
 * Fixed positioning of panel menus under Wayland and removed an old workaround about menu positioning with multi-screen setups.

V1.0.9
---------
 * Fixed a regression that caused crashes in QML apps and LibreOffice when the widget animation was disabled.
 * Workaround for bad codes that give an enormous contents size to item-views.

V1.0.8
---------
 * Fixed dragging of inactive windows of multi-window apps under Wayland.
 * Fixed a miscalculation about setting menu-item height in a rare case.
 * Improved the workaround for Qt's hover bug in combo-boxes (especially under Wayland).
 * Workaround for Qt's hover bug in header views (especially under Wayland).
 * Support combo menu icons whose widths are greater than the small icon size.
 * Limited the extra vertical margins of menu-item icons to 1px.
 * Smaller text-icon spacing for editable comboboxes that are drawn as lineedits.
 * Added vertical text margins of lineedits to their heights.
 * Also animate busy progressbars without `QWidget` (like "indeterminate" QML progressbars).

V1.0.7
---------